--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h2 class="nav-title"><span class="logo-style">S</span>abbir</h2>
+            <ul>
+                <li>Portfolio </li>
+                <li>Blog</li>
+                <li><button>Hire Me</button></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
