--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
 <body>
     <header>
         <nav>
-            <h2 class="nav-title"><span class="logo-style">S</span>abbir</h2>
+            <h2 class="nav-title"><span class="logo">S</span>abbir</h2>
             <ul>
                 <li>Portfolio </li>
                 <li>Blog</li>
-                <li><button>Hire Me</button></li>
+                <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+        <!-- header banner section  -->
+        <div class="banner">
+            <div>
+                <h1 class="banner-sub-title">Hi , I am</h1>
+                <h2 class="banner-title">Sabbir Rahman</h2>
+                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerlyhe. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+            </div>
+            <img src="./images/Sabbir.png" alt="">
+        </div>
     </header>
 </body>
 </html>
