--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <h2 class="banner-title">Sabbir Rahman</h2>
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerlyhe. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
+                <button class="btn-primary">Download CV</button>
             </div>
             <img src="./images/Sabbir.png" alt="">
         </div>
