--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title"><span class="logo">S</span>abbir</h2>
             <ul>
@@ -30,5 +30,33 @@
             <img src="./images/Sabbir.png" alt="">
         </div>
     </header>
+    <main>
+        <section class="about-section">
+            <h1 class="section-title">About Me</h1>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+                slick websites that provide real value to the end user. Thousands of clients have procured
+                exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata</p>
+
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-description">Sabbir </p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-description">rhsabbir090@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Date of birth:</p>
+                    <p class="info-description">20 Fevruary 2001</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">From:</p>
+                    <p class="info-description">Jamalpur</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
