--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <!-- link css  -->
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body>
     <header class="header">
         <nav>
@@ -23,7 +25,8 @@
             <div>
                 <h1 class="banner-sub-title">Hi , I am</h1>
                 <h2 class="banner-title">Sabbir Rahman</h2>
-                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerlyhe. Morning because as to society behaved moments.</p>
+                <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerlyhe.
+                    Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Download CV</button>
             </div>
@@ -32,11 +35,13 @@
     </header>
     <main>
         <section class="about-section">
-            <h1 class="section-title">About Me</h1>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and
+            <h1 class="about-section-title">About Me</h1>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and
                 slick websites that provide real value to the end user. Thousands of clients have procured
                 exceptional resulfs while working with me. Delivering work within time and budget which meets
-                clients requirements in our mata</p>
+                clients requirements in our mata
+            </p>
 
             <div class="about-info-container">
                 <div class="about-info">
@@ -57,6 +62,68 @@
                 </div>
             </div>
         </section>
+
+        <!-- what I Do  -->
+        <section>
+            <div class="section-title">
+                <h1>What I Do</h1> 
+            </div>
+
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="./images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <div class="skill-descriptyion">List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor.</div>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <div class="skill-descriptyion">List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor</div>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <div class="skill-descriptyion">List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolo</div>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <div class="skill-descriptyion">List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor</div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="section-title"><h1>A summary of My Resume</h1></div>
+            <div class="resume-content">
+                
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
