resume section done

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- what I Do  -->
         <section>
             <div class="section-title">
-                <h1>What I Do</h1> 
+                <h1>What I Do</h1>
             </div>
 
             <div class="skills-container">
@@ -118,9 +118,66 @@
         </section>
 
         <section>
-            <div class="section-title"><h1>A summary of My Resume</h1></div>
+            <div class="section-title">
+                <h1>A summary of My Resume</h1>
+            </div>
             <div class="resume-content">
-                
+                <div>
+                    <h3 class="resume-title">My Eudcation</h3>
+                    <div class="resume">
+                        <h2 class="title">Master in Computer Engineering</h2>
+                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume">
+                        <h2 class="title">Master in Computer Engineering</h2>
+                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume">
+                        <h2 class="title">Master in Computer Engineering</h2>
+                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+
+                    <div class="resume">
+                        <h2 class="title">Master in Computer Engineering</h2>
+                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume">
+                        <h2 class="title">Master in Computer Engineering</h2>
+                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume">
+                        <h2 class="title">Master in Computer Engineering</h2>
+                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
     </main>
