--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerlyhe.
                     Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-secondery">Contact</button>
             </div>
             <img src="./images/Sabbir.png" alt="">
         </div>
