--- a/index.html
+++ b/index.html
@@ -180,6 +180,28 @@
                 <button class="btn-primary">Download CV</button>
             </div>
         </section>
+
+        <!-- Contact section  -->
+        <section class="contact">
+            <div>
+                <h3 class="contact-title">Lets Connect</h3>
+                <P class="c-discription">Please fill out the form on this section to contact with me or call between
+                    9:00 A.M and 8.00 P.M ET, Monday through Friday</P>
+                <a href=""><img src="./images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="./images/icons/insta.png" alt=""></a>
+                <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+            </div>
+            <div>
+                <h3 class="contact-title">Let’s Message me</h3>
+                <form>
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="5" placeholder="Massage..."></textarea>
+                    <br>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 
