--- a/index.html
+++ b/index.html
@@ -152,27 +152,27 @@
                     <h3 class="resume-title">My Experience</h3>
 
                     <div class="resume">
-                        <h2 class="title">Master in Computer Engineering</h2>
-                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
-                        <p class="discription">List skill/technologies here. You can change the icon above
+                        <h2 class="title">Sr. Font End Developer</h2>
+                        <h5 class="sub-title"> Apple Inc / 2020 Current</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume">
-                        <h2 class="title">Master in Computer Engineering</h2>
-                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
-                        <p class="discription">List skill/technologies here. You can change the icon above
+                        <h2 class="title">Jr. Font End Developer</h2>
+                        <h5 class="sub-title"> Dribbble Inc / 2018 2022</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume">
-                        <h2 class="title">Master in Computer Engineering</h2>
-                        <h5 class="sub-title"> Harvard University / 2015 2017</h5>
-                        <p class="discription">List skill/technologies here. You can change the icon above
+                        <h2 class="title">HTML Developer</h2>
+                        <h5 class="sub-title">Adobe Inc / 2017 2018</h5>
+                        <p class="discription">List skill/technologies here. You can change the icon above 
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean
-                            commodo ligula eget dolor.</p>
+                            commodo ligula eget dolor</p>
                     </div>
                 </div>
             </div>
